k8s/003-data/50000-h2o/50-h2o-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h2o-service
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: h2o
  ports:
    - protocol: TCP
      port: 80
      targetPort: 54321
