k8s/003-data/50000-h2o/60-h2o-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: h2o-ingress
  namespace: default
  labels:
    app: h2o
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: h2o.data.davar.com
      http:
        paths:
          - backend:
              serviceName: h2o-service
              servicePort: 80
            path: /
  tls:
    - hosts:
        - h2o.data.davar.com
      secretName: h2o-production-tls
